Updated IOS Build

--- a/.github/workflows/build_ios.yml
+++ b/.github/workflows/build_ios.yml
@@ -45,6 +45,10 @@ jobs:
           security default-keychain -s build.keychain
           security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k "" build.keychain
 
+      - name: Debug list code signing identities
+        run: |
+          security find-identity -v -p codesigning
+
           
 
       # --- Build Flutter iOS artifacts from repo root (no codesign here) ---
