--- a/.github/workflows/build_ios.yml
+++ b/.github/workflows/build_ios.yml
@@ -22,34 +22,43 @@ jobs:
       - name: Flutter pub get
         run: flutter pub get
 
+      # Optional but fine to keep
       - name: Flutter precache iOS
         run: flutter precache --ios
 
       - name: Install fastlane (no bundler needed)
-        run: sudo gem install fastlane -NV
-
-      # 👇 Single keychain step (idempotent)
-      - name: Prepare build keychain (no p12 import)
         run: |
-          security delete-keychain build.keychain || true
+          sudo gem install fastlane -NV
+
+      # --- Import your Apple Distribution certificate (.p12) into a temp keychain ---
+      - name: Install signing certificate
+        env:
+          IOS_CERT_P12_BASE64: ${{ secrets.IOS_CERT_P12_BASE64 }}
+          IOS_CERT_PASSWORD: ${{ secrets.IOS_CERT_PASSWORD }}
+        run: |
+          echo "$IOS_CERT_P12_BASE64" | base64 --decode > dist_cert.p12
           security create-keychain -p "" build.keychain
           security set-keychain-settings -lut 21600 build.keychain
           security unlock-keychain -p "" build.keychain
+          security import dist_cert.p12 -k build.keychain -P "$IOS_CERT_PASSWORD" -T /usr/bin/codesign -T /usr/bin/security
           security list-keychains -s build.keychain login.keychain
           security default-keychain -s build.keychain
           security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k "" build.keychain
 
-      - name: Debug list identities (should be empty before fastlane cert)
-        run: security find-identity -v -p codesigning || true
+          
 
+      # --- Build Flutter iOS artifacts from repo root (no codesign here) ---
       - name: Build Flutter iOS artifacts (no codesign)
-        run: flutter build ios --release --no-codesign
+        run: |
+          flutter build ios --release --no-codesign
 
+      # --- CocoaPods inside ios/ ---
       - name: Pod install (inside ios)
         run: |
           cd ios
           pod install --repo-update
 
+      # --- Run fastlane from ios/ (Fastfile located at ios/fastlane/Fastfile) ---
       - name: Build and upload to TestFlight
         env:
           APP_STORE_KEY_ID: ${{ secrets.APP_STORE_KEY_ID }}
@@ -58,6 +67,7 @@ jobs:
         run: |
           cd ios
           fastlane beta
+
 
 
 
