--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+19
+version: 1.0.0+20
 
 environment:
   sdk: ^3.7.2
@@ -67,7 +67,7 @@ dependencies:
   firebase_core: ^4.1.0
   firebase_messaging: ^16.0.1
   onesignal_flutter: ^5.3.4
-  change_app_package_name: ^1.5.0
+  # change_app_package_name: ^1.5.0
   # flutter_local_notifications: ^19.2.0
   # permission_handler: ^12.0.1
 
@@ -76,9 +76,20 @@ flutter_icons:
   ios: true
   image_path: "lib/assets/images/appLogo.png"
 
+# flutter_native_splash:
+#   color: "#FFFFFF"                # background color
+#   image: lib/assets/images/splashLogo.png
+#   android: true
+#   ios: true
+#   web: false
+#   android_12:
+#     image: lib/assets/images/splashLogo.png
+#     icon_background_color: "#FFFFFF"
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  # flutter_native_splash: ^2.4.7
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
