--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -26,19 +26,32 @@
 		<string>$(FLUTTER_BUILD_NUMBER)</string>
 		<key>LSRequiresIPhoneOS</key>
 		<true/>
+
+		<!-- ===== Defined By Muhammad Ahsan ===== -->
+		<!-- ===== Permissions you need (Camera + Photos + Location + Tracking etc) ===== -->
 		<key>NSCameraUsageDescription</key>
 		<string>App requires access to the camera to take profile pictures of users.</string>
 		<key>NSPhotoLibraryUsageDescription</key>
 		<string>App requires access to your photo library to upload profile pictures of users.</string>
 		<key>NSUserTrackingUsageDescription</key>
 		<string>App uses tracking to deliver personalized notifications.</string>
+		<key>NSLocationWhenInUseUsageDescription</key>
+		<string>OtoBix Dealer App needs access to your location to show nearby cars, dealerships, and improve your app experience.</string>
 		<key>UIApplicationSupportsIndirectInputEvents</key>
 		<true/>
+
+  		<!-- ===== Background modes for OneSignal ===== -->
 		<key>UIBackgroundModes</key>
 		<array>
 			<string>remote-notification</string>
 			<string>fetch</string>
 		</array>
+		
+  		<!-- ===== Tell App Store that app uses encryption ===== -->
+		<key>ITSAppUsesNonExemptEncryption</key>
+		<false/>
+		<!-- ===== Defined By Muhammad Ahsan ===== -->
+
 		<key>UILaunchStoryboardName</key>
 		<string>LaunchScreen</string>
 		<key>UIMainStoryboardFile</key>
