--- a/.github/workflows/build_android.yml
+++ b/.github/workflows/build_android.yml
@@ -63,5 +63,6 @@ jobs:
           serviceAccountJsonPlainText: ${{ secrets.PLAY_STORE_SERVICE_ACCOUNT }}
           packageName: com.otobix.auctionapp
           releaseFiles: build/app/outputs/bundle/release/app-release.aab
-          track: internal   # can be internal, alpha, beta, production
+          # track: internal   # can be internal, alpha, beta, production
+          track: production   # can be internal, alpha, beta, production
           status: completed
